docs-archive/apache-airflow-providers-standard/1.5.0/_sources/_api/airflow/providers/standard/operators/branch/index.rst.txt
airflow.providers.standard.operators.branch
===========================================

.. py:module:: airflow.providers.standard.operators.branch

.. autoapi-nested-parse::

   Branching operators.



Classes
-------

.. autoapisummary::

   airflow.providers.standard.operators.branch.BranchMixIn
   airflow.providers.standard.operators.branch.BaseBranchOperator


Module Contents
---------------

.. py:class:: BranchMixIn(context=None)

   Bases: :py:obj:`airflow.providers.standard.utils.skipmixin.SkipMixin`


   Utility helper which handles the branching as one-liner.


   .. py:method:: do_branch(context, branches_to_execute)

      Implement the handling of branching including logging.



.. py:class:: BaseBranchOperator(*, task_id, owner = DEFAULT_OWNER, email = None, email_on_retry = True, email_on_failure = True, retries = DEFAULT_RETRIES, retry_delay = DEFAULT_RETRY_DELAY, retry_exponential_backoff = False, max_retry_delay = None, start_date = None, end_date = None, depends_on_past = False, ignore_first_depends_on_past = DEFAULT_IGNORE_FIRST_DEPENDS_ON_PAST, wait_for_past_depends_before_skipping = DEFAULT_WAIT_FOR_PAST_DEPENDS_BEFORE_SKIPPING, wait_for_downstream = False, dag = None, params = None, default_args = None, priority_weight = DEFAULT_PRIORITY_WEIGHT, weight_rule = DEFAULT_WEIGHT_RULE, queue = DEFAULT_QUEUE, pool = None, pool_slots = DEFAULT_POOL_SLOTS, sla = None, execution_timeout = DEFAULT_TASK_EXECUTION_TIMEOUT, on_execute_callback = None, on_failure_callback = None, on_success_callback = None, on_retry_callback = None, on_skipped_callback = None, pre_execute = None, post_execute = None, trigger_rule = DEFAULT_TRIGGER_RULE, resources = None, run_as_user = None, map_index_template = None, max_active_tis_per_dag = None, max_active_tis_per_dagrun = None, executor = None, executor_config = None, do_xcom_push = True, multiple_outputs = False, inlets = None, outlets = None, task_group = None, doc = None, doc_md = None, doc_json = None, doc_yaml = None, doc_rst = None, task_display_name = None, logger_name = None, allow_nested_operators = True, **kwargs)

   Bases: :py:obj:`airflow.providers.standard.version_compat.BaseOperator`, :py:obj:`BranchMixIn`


   A base class for creating operators with branching functionality, like to BranchPythonOperator.

   Users should create a subclass from this operator and implement the function
   `choose_branch(self, context)`. This should run whatever business logic
   is needed to determine the branch, and return one of the following:
   - A single task_id (as a str)
   - A single task_group_id (as a str)
   - A list containing a combination of task_ids and task_group_ids

   The operator will continue with the returned task_id(s) and/or task_group_id(s), and all other
   tasks directly downstream of this operator will be skipped.


   .. py:attribute:: inherits_from_skipmixin
      :value: True


      Used to determine if an Operator is inherited from SkipMixin or its subclasses (e.g., BranchMixin).



   .. py:method:: choose_branch(context)
      :abstractmethod:


      Abstract method to choose which branch to run.

      Subclasses should implement this, running whatever logic is
      necessary to choose a branch and returning a task_id or list of
      task_ids.

      :param context: Context dictionary as passed to execute()



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



